# transaction_manager_back

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  transaction_example.csv  transaction_example_wrong_format.csv
.github/workflows/: clean_branches.yml
app/application/use_cases/: get_transaction.py  list_transactions.py  process_transaction_file.py  submit_transaction.py
app/domain/models/: transaction.py  transaction_status.py
app/domain/repositories/: transaction_repository.py
app/infrastructure/api/: main.py
app/infrastructure/api/routes/: transactions.py
app/infrastructure/api/schemas/: transaction.py
app/infrastructure/database/: init_db.py  models.py  repository_impl.py  session.py
app/infrastructure/workers/: celery_app.py  tasks.py
app/infrastructure/workers/tasks/: __init__.py  transaction_tasks.py
nginx/: Dockerfile
tests/: conftest.py
tests/integration_tests/: test_api_integration.py  test_repository_integration.py
tests/unit_tests/: test_transaction_model.py  test_transaction_status.py  test_use_cases.py
